Add open link at the new page

--- a/donate.html
+++ b/donate.html
@@ -144,7 +144,7 @@
                                 <li role="presentation" class="dropdown"><a id="gay_friends" href="gay_friends.html">GFriends</a></li>
                                 <!-- <li id="ts-search-input-li"><form><input type="search" id="ts-search-input" placeholder="搜索: Android Studio"></form></li> -->
                                 <li>
-                                    <a href="https://github.com/inferjay/AndroidDevTools" data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
+                                    <a href="https://github.com/inferjay/AndroidDevTools"  data-title="View GitHub Project" class="menu-github-icon"><img src="static/image/icon-github.png" alt="GitHub" /></a>
                                 </li>
                             </ul>
                     </menu>
@@ -192,15 +192,15 @@
                                 <td>¥10.24</td>
                                 <td>李若紫</td>
                                 <td>¥100</td>
-                                <td><a href="https://github.com/aaronsu" target="_blank">馄饨</a></td>
+                                <td><a href="https://github.com/aaronsu">馄饨</a></td>
                                 <td>¥88.88</td>
-                                <td><a href="http://qiugeder.leanote.com/" target="_blank">卷帘大将</a></td>
+                                <td><a href="http://qiugeder.leanote.com/">卷帘大将</a></td>
                                 <td>¥1.24</td>
                             </tr>
                             <tr>
                                 <td>leeyao</td>
                                 <td>¥10.24</td>
-                                <td><a href="http://blog.csdn.net/zc0727" target="_blank">小卒</a></td>
+                                <td><a href="http://blog.csdn.net/zc0727">小卒</a></td>
                                 <td>¥1.88</td>
                                 <td><a href="http://weibo.com/bachfans">标哥</a></td>
                                 <td>¥4.99</td>
@@ -218,7 +218,7 @@
                                 <td>¥5</td>
                             </tr>
                             <tr>
-                                <td><a href="http://weibo.com/zhuzaifei" target="_blank">猪在飞_</a></td>
+                                <td><a href="http://weibo.com/zhuzaifei">猪在飞_</a></td>
                                 <td>¥3.14</td>
                                 <td>元方</td>
                                 <td>¥14.7</td>
@@ -244,13 +244,13 @@
                                 <td>¥20</td>
                                 <td>唐序晓</td>
                                 <td>¥7</td>
-                                <td><a href="http://weibo.com/u/3254747115" target="_blank">赵小华</a></td>
+                                <td><a href="http://weibo.com/u/3254747115">赵小华</a></td>
                                 <td>¥10.24</td>
                             </tr>
                             <tr>
                                 <td>stormlion</td>
                                 <td>¥10</td>
-                                <td><a href="http://t.qq.com/vae-xuanhuan" target="_blank">爱小说爱漫画</a></td>
+                                <td><a href="http://t.qq.com/vae-xuanhuan">爱小说爱漫画</a></td>
                                 <td>¥3</td>
                                 <td>Charn</td>
                                 <td>¥10.24</td>
@@ -260,7 +260,7 @@
                             <tr>
                                 <td>伟荣</td>
                                 <td>¥10.24</td>
-                                <td><a href="http://t.qq.com/uspider" target="_blank">xiaopeng</a></td>
+                                <td><a href="http://t.qq.com/uspider">xiaopeng</a></td>
                                 <td>¥10</td>
                                 <td>宁</td>
                                 <td>¥12</td>
@@ -272,7 +272,7 @@
                                 <td>¥0.2</td>
                                 <td>彬</td>
                                 <td>¥2</td>
-                                <td><a href="http://weibo.com/1810341433" target="_blank">陌欠0</a></td>
+                                <td><a href="http://weibo.com/1810341433">陌欠0</a></td>
                                 <td>¥10.24</td>
                                 <td>风拂尘</td>
                                 <td>¥20.74</td>
@@ -280,7 +280,7 @@
                             <tr>
                                 <td>星源</td>
                                 <td>¥10</td>
-                                <td><a href="https://github.com/hackerlc" target="_blank">壹尘子☁️</a></td>
+                                <td><a href="https://github.com/hackerlc">壹尘子☁️</a></td>
                                 <td>¥9.88</td>
                                 <td>亮</td>
                                 <td>¥20</td>
@@ -290,7 +290,7 @@
                             <tr>
                                 <td>czz</td>
                                 <td>¥1</td>
-                                <td><a href="http://t.qq.com/smileseeyoume" target="_blank">新浪达人V</a></td>
+                                <td><a href="http://t.qq.com/smileseeyoume">新浪达人V</a></td>
                                 <td>¥6.66</td>
                                 <td>helloworld</td>
                                 <td>¥5</td>
@@ -304,7 +304,7 @@
                                 <td>¥1</td>
                                 <td>android coder</td>
                                 <td>¥5</td>
-                                <td><a href="http://t.qq.com/ainiyoulixuyaoma" target="_blank">孙思远</a></td>
+                                <td><a href="http://t.qq.com/ainiyoulixuyaoma">孙思远</a></td>
                                 <td>¥3.14</td>
                             </tr>
                             <tr>
@@ -312,9 +312,9 @@
                                 <td>¥2</td>
                                 <td>找刺激</td>
                                 <td>¥10</td>
-                                <td><a href="http://weibo.com/2307218994" target="_blank">TKYOY</a></td>
+                                <td><a href="http://weibo.com/2307218994">TKYOY</a></td>
                                 <td>¥55.55</td>
-                                <td><a href="http://t.qq.com/e15103236513" target="_blank">嘉利</a></td>
+                                <td><a href="http://t.qq.com/e15103236513">嘉利</a></td>
                                 <td>¥6.8</td>
                             </tr>
                             <tr>
@@ -324,7 +324,7 @@
                                 <td>¥10.24</td>
                                 <td>袁超</td>
                                 <td>¥3</td>
-                                <td><a href="http://droidyue.com" target="_blank">技术小黑屋</a></td>
+                                <td><a href="http://droidyue.com">技术小黑屋</a></td>
                                 <td>¥7.7</td>
                             </tr>
                             <tr>
@@ -334,11 +334,11 @@
                                 <td>¥1.43</td>
                                 <td>小燕子</td>
                                 <td>¥5</td>
-                                <td><a href="http://t.qq.com/xyh666168" target="_blank">自由飞翔</a></td>
+                                <td><a href="http://t.qq.com/xyh666168">自由飞翔</a></td>
                                 <td>¥16.8</td>
                             </tr>
                             <tr>
-                                <td><a href="http://t.qq.com/nxy1976" target="_blank">andy</a></td>
+                                <td><a href="http://t.qq.com/nxy1976">andy</a></td>
                                 <td>¥50</td>
                                 <td>周公不解梦</td>
                                 <td>¥5</td>
@@ -1012,7 +1012,7 @@
                             <tr>
                                 <td>Nonage</td>
                                 <td>¥1</td>
-                                <td><a href="http://www.imlc.me" target="_blank">Ching</a></td>
+                                <td><a href="http://www.imlc.me">Ching</a></td>
                                 <td>¥10</td>
                                 <td>史玉全</td>
                                 <td>¥10.24</td>
@@ -1062,7 +1062,7 @@
                             <tr>
                                 <td>死灵仓鬼</td>
                                 <td>¥10</td>
-                                <td><a href="http://iamaboy.xyz/" target="_blank">Qusay</a></td>
+                                <td><a href="http://iamaboy.xyz/">Qusay</a></td>
                                 <td>¥5</td>
                                 <td>行者无疆</td>
                                 <td>¥5</td>
@@ -1212,8 +1212,8 @@
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
         <footer class="inner">
-            <p class="copyright">Made by <a href="http://www.inferjay.com/" target="_blank">脉脉不得语</a></p>
-            <p class="published">Published with <a href="http://pages.github.com" target="_blank">GitHub Pages</a></p>
+            <p class="copyright">Made by <a href="http://www.inferjay.com/">脉脉不得语</a></p>
+            <p class="published">Published with <a href="http://pages.github.com">GitHub Pages</a></p>
         </footer>
     </div>
     <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
@@ -1290,6 +1290,22 @@
         var pageTracker = _gat._getTracker("UA-52369435-2");
         pageTracker._trackPageview();
     } catch (err) {}
+    </script>
+    <!-- add target attr to all a tag -->
+    <script type="text/javascript">
+        //bind a click
+        $(document).bind('DOMNodeInserted', function(event) {
+            $('a[href^="http"]').each(
+                function(){
+                    if (!$(this).attr('target')) {
+                        $(this).attr('target', '_blank')
+                    }
+                    if ($(this).attr('href').indexOf("androiddevtools.cn") != -1) {
+                        $(this).attr('target', '_self')
+                    }
+                }
+            );
+        });
     </script>
 </body>
 
