--- a/gay_friends.html
+++ b/gay_friends.html
@@ -160,57 +160,57 @@
                 <div class="gay_friends_list">
 	                <ul>
 	                    <li>
-	                        <a href="http://gank.io" target="_blank" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
+	                        <a href="http://gank.io" title="干货集中营，每日分享妹子图 和 技术干货，还有供大家中午休息的休闲视频">
 	                            <img src="http://ww1.sinaimg.cn/large/610dc034gw1f1lnnpb9tej203n01sdfn.jpg" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://stormzhang.com" target="_blank" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
+	                        <a href="http://stormzhang.com" title="Android开发者 + Ruby语言爱好者 + Google脑残粉，爱技术，爱尝鲜，爱开源，爱设计，也爱赚钱！ 热爱并沉溺于移动互联网，Want to make a good app!">
 	                            <img src="http://stormzhang.com/image/avatar_64.png" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://www.codekk.com" target="_blank" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
+	                        <a href="http://www.codekk.com" title="codeKK，专注于开源项目源码解析及优秀开源项目的分享">
 	                            <img src="http://www.codekk.com/images/codekk-com-130-64.png" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://www.trinea.cn/" target="_blank" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
+	                        <a href="http://www.trinea.cn/" title="Trinea，目前在滴滴出行担任技术专家，主攻 Java 和 Android，专于性能调优和框架设计。">
 	                            <img src="http://www.codekk.com/images/trinea-cn-130-64.png" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://www.liaohuqiu.net" target="_blank" title="秋百万，Make it better.">
+	                        <a href="http://www.liaohuqiu.net" title="秋百万，Make it better.">
 	                            <img src="http://ww2.sinaimg.cn/large/86e2ff85gw1f1qvio0f2ej203m01s0sl.jpg" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://droidyue.com/" target="_blank" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
+	                        <a href="http://droidyue.com/" title="技术小黑屋，Android 工程师，Infoq译者， 2015 GDG Devfest讲师;不是90后，89年出生的保定人在北京;喜欢终端上完成操作，对GUI有点偏见;一个优秀的程序员应该是一位艺术家，其代码不可增不可减。">
 	                            <img src="http://7jpolu.com1.z0.glb.clouddn.com/droidyue_com.png" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://drakeet.me" target="_blank" title="Drakeet">
+	                        <a href="http://drakeet.me" title="Drakeet">
 	                            <img src="http://ww4.sinaimg.cn/large/86e2ff85gw1f1jt6vd4snj203m01sjra.jpg" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://hukai.me" target="_blank" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
+	                        <a href="http://hukai.me" title="Hi，我是胡凯，就职于腾讯从事Android开发的工作。">
 	                            <img src="http://hukai.me/images/avatar/130_64.jpg" />
 	                        </a>
 	                    </li>
 	                    <li>
-	                        <a href="http://androidweekly.cn" target="_blank" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
+	                        <a href="http://androidweekly.cn" title="Android 开发技术周报,汇集互联网上每周Android开发的技术文章、开源项目、开发工具、视频教程、Android设计教程、设计资源等。">
 	                            <img src="http://7xrhuv.com1.z0.glb.clouddn.com/androidweekly_cn.png" />
 	                        </a>
 	                    </li>
                         <li>
-                            <a href="http://www.race604.com" target="_blank" title="专注 Android 移动应用开发，在开发中积累和成长。">
+                            <a href="http://www.race604.com" title="专注 Android 移动应用开发，在开发中积累和成长。">
                                 <img src="http://ww4.sinaimg.cn/large/8a41f469jw1f27s3aeagij207803kt8o.jpg" />
                             </a>
                         </li>
                         <li>
-                            <a href="http://kymjs.com" target="_blank" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
+                            <a href="http://kymjs.com" title="Hello，大家好，我是张涛，网名kymjs，在深圳的湖北人。开源中国移动开发工程师。爱看书，爱敲码，善于交流，乐于分享。曾担任电影《天籁：一万年以后》新媒体推广产品经理，负责电影推广营销事项。">
                                 <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f27ukzgjhuj203m01s0tb.jpg" />
                             </a>
                         </li>
@@ -317,6 +317,22 @@
         var pageTracker = _gat._getTracker("UA-52369435-2");
         pageTracker._trackPageview();
     } catch (err) {}
+    </script>
+    <!-- add target attr to all a tag -->
+    <script type="text/javascript">
+        //bind a click
+        $(document).bind('DOMNodeInserted', function(event) {
+            $('a[href^="http"]').each(
+                function(){
+                    if (!$(this).attr('target')) {
+                        $(this).attr('target', '_blank')
+                    }
+                    if ($(this).attr('href').indexOf("androiddevtools.cn") != -1) {
+                        $(this).attr('target', '_self')
+                    }
+                }
+            );
+        });
     </script>
 </body>
 
