--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="setTimeout(function() {ga('sent', 'event', 'AD', 'click', 'jikexueyuan');}, 200);">
-			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg' border="0" />
+		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android'); return false;" >
+			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg'/>
 		</a>
 	</div>
    <div>
-        <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情" onclick="setTimeout(function() {ga(['sent', 'event', 'Activity', 'click', 'StudyJams');}, 200);">
+        <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情" onclick="ga('sent', 'event', 'Activity', 'click', 'StudyJams');" >
             <img src='http://ww2.sinaimg.cn/large/8a41f469jw1f27y2nqh6ij21cw0iw77t.jpg' border="0" />
         </a>
     </div>
@@ -4513,16 +4513,32 @@
         });
     });
     </script>
-    <script type="text/javascript">
-        var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-        document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-        </script>
-        <script type="text/javascript">
-        try {
-            var pageTracker = _gat._getTracker("UA-52369435-2");
-            pageTracker._trackPageview();
-        } catch (err) {}
+    <!-- Google Analytics -->
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-52369435-2', 'auto');
+        ga('send', 'pageview');
+        var trackOutboundLink = function(url) {
+            var redirectTriggered = false;
+            ga('send', 'event', 'OutBound', 'click', url, {'hitCallback':
+                function() {
+                    redirectTriggered = true;
+                    document.location = url;
+                }
+            });
+            setTimeout(function() {
+                if (!redirectTriggered) {
+                    document.location = url;
+                }
+            }, 1500);
+        };
     </script>
+    <!-- End Google Analytics -->
+
     <!-- add target attr to all a tag -->
     <script type="text/javascript">
         //bind a click
