--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android'); return false;" >
+		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="ga('sent', 'event', 'AD', 'click', 'Jikexueyuan');" >
 			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg'/>
 		</a>
 	</div>
@@ -4522,20 +4522,20 @@
 
         ga('create', 'UA-52369435-2', 'auto');
         ga('send', 'pageview');
-        var trackOutboundLink = function(url) {
-            var redirectTriggered = false;
-            ga('send', 'event', 'OutBound', 'click', url, {'hitCallback':
-                function() {
-                    redirectTriggered = true;
-                    document.location = url;
-                }
-            });
-            setTimeout(function() {
-                if (!redirectTriggered) {
-                    document.location = url;
-                }
-            }, 1500);
-        };
+        // var trackOutboundLink = function(url) {
+        //     var redirectTriggered = false;
+        //     ga('send', 'event', 'OutBound', 'click', url, {'hitCallback':
+        //         function() {
+        //             redirectTriggered = true;
+        //             document.location = url;
+        //         }
+        //     });
+        //     setTimeout(function() {
+        //         if (!redirectTriggered) {
+        //             document.location = url;
+        //         }
+        //     }, 1500);
+        // };
     </script>
     <!-- End Google Analytics -->
 
