Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1184,10 +1184,10 @@
                                 <td>¥2</td>
                                 <td>李国梁</td>
                                 <td>¥10</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>千</td>
+                                <td>¥15</td>
+                                <td>gityuan</td>
+                                <td>¥6.66</td>
                             </tr>
                         </tbody>
                     </table>
