Add Android Studio 2.1 Preview4

--- a/index.html
+++ b/index.html
@@ -247,10 +247,37 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.1 Preivew4 -->
+                            <tr>
+                              <td rowspan="4">2.1 Preview4</td>
+                            </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1miQtzhY">android-studio-ide-143.2712822-windows.zip</a></td>
+                              <td>293 MB</td>
+                              <td>bf56a5bfca30d9270aaa5f06301ab133751307ad</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469jw1f2bhyy7dv5j21es0u2h3t.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1nvQrytz">android-studio-ide-143.2712822-mac.zip</a>
+                              </td>
+                              <td>292 MB</td>
+                              <td>9865381d46a1fdd3aa43a54c2274f762b9981e75</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1hrCEkg0">android-studio-ide-143.2712822-linux.zip</a>
+                              </td>
+                              <td>291 MB</td>
+                              <td>5fcc6eced5f14687ff9b09465e9654cc3c840cd0</td>
+                            </tr>
                         	<!-- 2.1 Preview3 -->
 							<tr>
 							  <td rowspan="4">2.1 Preview3</td>
-								</tr>
+							</tr>
 							<tr>
 							  <td >Windows</td>
 							  <td align="left"><a href="http://pan.baidu.com/s/1kTRf8G3">android-studio-ide-143.2682553-windows.zip</a></td>
