--- a/donate.html
+++ b/donate.html
@@ -1186,7 +1186,7 @@
                                 <td>¥10</td>
                                 <td>千</td>
                                 <td>¥15</td>
-                                <td>gityuan</td>
+                                <td><a href="http://gityuan.com">gityuan</a></td>
                                 <td>¥6.66</td>
                             </tr>
                         </tbody>
