Addd donate info

--- a/donate.html
+++ b/donate.html
@@ -1189,6 +1189,16 @@
                                 <td><a href="http://gityuan.com">gityuan</a></td>
                                 <td>¥6.66</td>
                             </tr>
+                            <tr>
+                                <td>垂中</td>
+                                <td>¥8.88</td>
+                                <td><a href="http://blog.csdn.net/qq_18824545">路西菲尔丶齐</a></td>
+                                <td>¥10.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
