--- a/donate.html
+++ b/donate.html
@@ -1194,8 +1194,8 @@
                                 <td>¥8.88</td>
                                 <td><a href="http://blog.csdn.net/qq_18824545">路西菲尔丶齐</a></td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>爵缰De小翼</td>
+                                <td>¥10.24</td>
                                 <td></td>
                                 <td></td>
                             </tr>
