Addd Android Studio 2.0 RC1 Link

--- a/index.html
+++ b/index.html
@@ -329,6 +329,33 @@
 							  <td>304 MB</td>
 							  <td>7b7f936ff7eb6ef4c2446fc3406ccd09ccf2737a</td>
 							</tr>
+                             <!-- 2.0 RC1 -->
+                            <tr>
+                              <td rowspan="4">2.0 RC1</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1mieWLkc">android-studio-ide-143.2720475-windows.zip</a></td>
+                              <td>289 MB</td>
+                              <td>12e2bd63142f5c28e0ee8f79c0a1378af4e4aec3</td>
+                              <td rowspan="4"><a href="http://ww1.sinaimg.cn/large/8a41f469jw1f2fwwiu7a9j21ei0tmn85.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1nuG8mNZ">android-studio-ide-143.2720475-mac.zip</a>
+                              </td>
+                              <td>287.5 MB</td>
+                              <td>1b09c24d4cd68bd245aa08e2b07ccc8c35b7b4b4</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1pK7GEpX">android-studio-ide-143.2720475-linux.zip</a>
+                              </td>
+                              <td>286.7 MB</td>
+                              <td>25626153f742e976f7b11c6a1e8ef1e807ed4418</td>
+                            </tr>
 							<!-- 2.1 Beta7 -->
 							<tr>
 							  <td rowspan="4">2.1 Beta7</td>
