--- a/donate.html
+++ b/donate.html
@@ -1199,6 +1199,16 @@
                                 <td>勇</td>
                                 <td>¥10</td>
                             </tr>
+                            <tr>
+                                <td>Godhands小熊</td>
+                                <td>¥10.24</td>
+                                <td>davidfoxhu</td>
+                                <td>¥25</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
