Fixed AD don't click

--- a/index.html
+++ b/index.html
@@ -153,12 +153,12 @@
             </div>
     </header>
     <div id="ad_right_float" style="z-index: 10; right: 0px; position: absolute; top: 340px;">
-		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07', 'AD', 'click'); return false;" >
+		<a href="http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07" title="如果你曾经或者正在学习这个课程，欢迎大家在评论框给我留言，反馈这个课程的学习情况" onclick="trackOutboundLink('http://j.jikexueyuan.com/train/android?hmsr=andtool_jiuye_banner_android_03.07', 'AD', 'click');" >
 			<img src='http://ww3.sinaimg.cn/large/8a41f469gw1f1oi91uju3j204605k74k.jpg'/>
 		</a>
 	</div>
    <div>
-        <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" onclick="trackOutboundLink('http://www.androidweekly.cn/30-day-starter-android-dev/', 'Activity', 'click'); return false;" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情"  >
+        <a href="http://www.androidweekly.cn/30-day-starter-android-dev/" onclick="trackOutboundLink('http://www.androidweekly.cn/30-day-starter-android-dev/', 'Activity', 'click');" title="Study Jams 是一个学习 Google 在线课程的活动。该活动由学员自主发起课程学习小组,带领小 组成员入门 Android 开发,最终将 Android App 上载至 Google Play 并与他人分享自己的学习历程。点击查看活动详情"  >
             <img src='http://ww2.sinaimg.cn/large/8a41f469jw1f27y2nqh6ij21cw0iw77t.jpg' border="0" />
         </a>
     </div>
