Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1204,10 +1204,10 @@
                                 <td>¥10.24</td>
                                 <td>davidfoxhu</td>
                                 <td>¥25</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td><a href="http://24suixinsuoyu.com">隋心所欲</a></td>
+                                <td>¥10.24</td>
+                                <td>王志</td>
+                                <td>¥10</td>
                             </tr>
                         </tbody>
                     </table>
