Add JDK 1.8u77 info

--- a/index.html
+++ b/index.html
@@ -1682,6 +1682,18 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <tr>
+                                <td align="center">1.8 u77</td>
+                                <td align="center">
+                                    <a href="http://pan.baidu.com/s/1hsFDbBu">32位</a> <a href="http://pan.baidu.com/s/1kUJuzH1">64位</a>
+                                </td>
+                                <td align="center">
+                                    <a href="http://pan.baidu.com/s/1bRetFw">64位</a>
+                                </td>
+                                <td align="center">
+                                    <a href="http://pan.baidu.com/s/1i4YX7VZ">32位</a> <a href="http://pan.baidu.com/s/1slBWTIH">64位</a>
+                                </td>
+                            </tr>
                         	<tr>
                         		<td align="center">1.8 u74</td>
                                 <td align="center">
