Add SDK Tools 24.4.1 link

--- a/index.html
+++ b/index.html
@@ -749,6 +749,41 @@
                         </thead>
                         <tbody>
                             <tr>
+                                <td rowspan="5">24.4.1</td>
+                            </tr>
+                            <tr>
+                              <td rowspan="2">Windows</td>
+                              <td align="left">
+                                <a id="win-tools" href="http://pan.baidu.com/s/1kVjIPCV">installer_r24.4.1indows.exe</a>
+                              </td>
+                              <td>151659917 bytes</td>
+                              <td>f9b59d72413649d31e633207e31f456443e7ea0b</td>
+                              <td rowspan="5"><a href="http://ww2.sinaimg.cn/large/8a41f469jw1f2ng43mgnhj21kw0fmwhi.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                                <td align="left">
+                                    <a href="">android-sdk_r24.4.1-windows.zip<>
+                                </td>
+                                <td>199701062 bytes</td>
+                                <td>66b6a6433053c152b22bf8cab19c0f3fef4eba49</td>
+                            </tr>
+                            <tr>
+                                <td><nobr>Mac OS X</nobr></td>
+                                <td align="left">
+                                    <a id="mac-tools" href="http://pan.baidu.com/s/1nuWN7V7">android-sdk_r24.4.macosx.zip</a>
+                                </td>
+                                <td>102781947 bytes</td>
+                                <td>85a9cccb0b1f9e6f1f616335c5f07107553840cd</td>
+                            </tr>
+                            <tr>
+                                <td>Linux</td>
+                                <td align="left">
+                                    <a id="linux-tools" href="http://pan.baidu.com/s/1o8iqMQQ">androiddk_r24.4.1-linux.tgz</a>
+                                </td>
+                                <td>326412652 bytes</td>
+                                <td>725bb360f0f7d04eaccff5a2d57abdd49061326d</td>
+                            </tr>
+                            <tr>
                                 <td rowspan="5">24.3.4</td>
                             </tr>
                             <tr>
