Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1209,6 +1209,16 @@
                                 <td>王志</td>
                                 <td>¥10</td>
                             </tr>
+                            <tr>
+                                <td>艾玛你快点行不</td>
+                                <td>¥10.24</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
