Add Android Studio 2.1 Preview5 Link

--- a/index.html
+++ b/index.html
@@ -247,6 +247,35 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.1 Preivew5 -->
+                            <tr>
+                              <td rowspan="4">2.0 Preivew5</td>
+                                </tr>
+                            <tr>
+                              <td >Windows</td>
+                              <td align="left"><a href="http://pan.baidu.com/s/1pLzjMER">android-studio-ide-143.2730271-windows.zip</a></td>
+                              <td>298 MB</td>
+                              <td>02431e373847a786353cc17372e534c38dae09b3</td>
+                              <td rowspan="4"><a href="http://ww4.sinaimg.cn/large/8a41f469jw1f2om0ow1s2j21ec0w4akv.jpg">查看</a></td>
+                            </tr>
+                            
+                            <tr>
+                              <td><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1kV6d751">android-studio-ide-143.2730271-mac.zip</a>
+                              </td>
+                              <td>296 MB</td>
+                              <td>006e7c9851494dce450071c1439de7a131a9df4b</td>
+                            </tr>
+                            
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1mi0BOW4">android-studio-ide-143.2730271-linux.zip</a>
+                              </td>
+                              <td>295 MB</td>
+                              <td>5313999f2885b673d58ba4b6462d68fd167ba831</td>
+                            </tr>
                             <!-- 2.1 Preivew4 -->
                             <tr>
                               <td rowspan="4">2.1 Preview4</td>
