Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1212,8 +1212,8 @@
                             <tr>
                                 <td>艾玛你快点行不</td>
                                 <td>¥10.24</td>
-                                <td></td>
-                                <td></td>
+                                <td>Cxl</td>
+                                <td>¥0.96</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
