Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1214,8 +1214,8 @@
                                 <td>¥10.24</td>
                                 <td>Cxl</td>
                                 <td>¥0.96</td>
-                                <td></td>
-                                <td></td>
+                                <td>李龙华</td>
+                                <td>¥6.66</td>
                                 <td></td>
                                 <td></td>
                             </tr>
