Add Android Stduio 2.0 Link

--- a/index.html
+++ b/index.html
@@ -247,6 +247,46 @@
                             </tr>
                         </thead>
                         <tbody>
+                            <!-- 2.0 正式版 -->
+                            <tr>
+                              <td rowspan="6">2.0 正式版</td>
+                                </tr>
+                            <tr>
+                              <td rowspan="3">Windows</td>
+                              <td align="left">
+                                    <a href="http://pan.baidu.com/s/1cHlqma">android-studio-bundle-143.2739321-windows.exe</a><br>(推荐)
+                              </td>
+                              <td>1166 MB</td>
+                              <td>c556debf40de6b5d6f6d65d169a64398e3380183</td>
+                              <td rowspan="6"><a href="http://ww2.sinaimg.cn/large/8a41f469jw1f2ps88nfxdj21fg0t2n6l.jpg">查看</a></td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="http://pan.baidu.com/s/1cHlqma">android-studio-ide-143.2739321-windows.exe</a><br>(不含SDK Tools)
+                              </td>
+                              <td>264 MB</td>
+                              <td>3e8c25bd7b7f3aa326f7b2a349c4d67c550d13ac</td>
+                            </tr>
+                            <tr>
+                              <td align="left"><a href="http://pan.baidu.com/s/1cHlqma">android-studio-ide-143.2739321-windows.zip</a></td>
+                              <td>280 MB</td>
+                              <td>705c00f52b715d6a845c97979ced6f9b1b3f11c6</td>
+                            </tr>
+                            <tr>
+                              <td ><nobr>Mac OS X</nobr></td>
+                              <td align="left">
+                                    <a href="http://pan.baidu.com/s/1c1MWB1e">android-studio-ide-143.2739321-mac.dmg</a>
+                              </td>
+                              <td>279 MB</td>
+                              <td>0f3d53a08815c00912c13738abc79e82207b20ed</td>
+                            </tr>
+                            <tr>
+                              <td>Linux</td>
+                              <td align="left">
+                                        <a href="http://pan.baidu.com/s/1i4OitY9">android-studio-ide-143.2739321-linux.zip</a>
+                              </td>
+                              <td>278 MB</td>
+                              <td>b64070ee4ec4868e9dd942b56f76864634cb0c67</td>
+                            </tr>
                             <!-- 2.1 Preivew5 -->
                             <tr>
                               <td rowspan="4">2.1 Preivew5</td>
