Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1216,6 +1216,16 @@
                                 <td>¥0.96</td>
                                 <td>李龙华</td>
                                 <td>¥6.66</td>
+                                <td>怀光雾影</td>
+                                <td>¥7.59</td>
+                            </tr>
+                            <tr>
+                                <td>幼瑜</td>
+                                <td>¥9.11</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
