Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1222,12 +1222,12 @@
                             <tr>
                                 <td>幼瑜</td>
                                 <td>¥9.11</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>聪</td>
+                                <td>¥2</td>
+                                <td>正念</td>
+                                <td>¥10</td>
+                                <td>Vali</td>
+                                <td>¥5</td>
                             </tr>
                         </tbody>
                     </table>
