Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1229,6 +1229,16 @@
                                 <td>Vali</td>
                                 <td>¥5</td>
                             </tr>
+                            <tr>
+                                <td>yy sleep</td>
+                                <td>¥5</td>
+                                <td>小Qiao</td>
+                                <td>¥20</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
