--- a/index.html
+++ b/index.html
@@ -177,6 +177,10 @@
                         <h4>Android SDK在线更新镜像服务器</h4>
                         <ol>
                             <li>
+                                <p>南阳理工学院镜像服务器地址:</p>
+                                <p><code>mirror.nyist.edu.cn</code> 端口：80</p>
+                            </li>
+                            <li>
                                 <p>中国科学院开源协会镜像站地址:</p>
                                 <ul>
                                     <li>
