Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1256,8 +1256,8 @@
                                 <td>¥5</td>
                                 <td>ExiaHan</td>
                                 <td>¥10.24</td>
-                                <td> </td>
-                                <td></td>
+                                <td>Mzf</td>
+                                <td>¥20</td>
                             </tr>
                         </tbody>
                     </table>
