--- a/gay_friends.html
+++ b/gay_friends.html
@@ -219,6 +219,11 @@
                                 <img src="http://ww1.sinaimg.cn/large/8a41f469jw1f29a4e11baj203m01st8i.jpg" />
                             </a>
                         </li>
+                        <li>
+                            <a href="http://diycode.cc" target="_blank" title="DiyCode是一个优雅、极客、创意、分享、美好的开发社区">
+                                <img src="http://ww2.sinaimg.cn/mw690/6ff56379jw1f339yb3a5oj203m01sweb.jpg" />
+                            </a>
+                        </li>
 	                </ul>
             	</div>
             </div>
