--- a/donate.html
+++ b/donate.html
@@ -1260,10 +1260,10 @@
                                 <td>¥20</td>
                             </tr>
                             <tr>
-                                <td>保俊</td>
+                                <td><a href="http://www.openloongson.org/">fubaojun2006</a></td>
                                 <td>¥8</td>
-                                <td></td>
-                                <td></td>
+                                <td>世超</td>
+                                <td>¥100</td>
                                 <td></td>
                                 <td></td>
                                 <td></td>
