Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1264,8 +1264,8 @@
                                 <td>¥8</td>
                                 <td>世超</td>
                                 <td>¥100</td>
-                                <td></td>
-                                <td></td>
+                                <td>路人甲</td>
+                                <td>¥1.24</td>
                                 <td></td>
                                 <td></td>
                             </tr>
