Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1266,6 +1266,16 @@
                                 <td>¥100</td>
                                 <td>路人甲</td>
                                 <td>¥1.24</td>
+                                <td>Kcwind</td>
+                                <td>¥8.8</td>
+                            </tr>
+                            <tr>
+                                <td>Melon</td>
+                                <td>¥9.99</td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
                                 <td></td>
                                 <td></td>
                             </tr>
