Add donate info

--- a/donate.html
+++ b/donate.html
@@ -1284,10 +1284,10 @@
                                 <td>¥0.01</td>
                                 <td>智</td>
                                 <td>¥8</td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>北风呼呼的吹</td>
+                                <td>¥10</td>
+                                <td>刘畅</td>
+                                <td>¥5</td>
                             </tr>
                         </tbody>
                     </table>
